Закончена разметка страницы Портфолио и все оформление текста

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <address class="footer-address">
                 <ul class="footer-address-list">
                     <li>
-                        <a href="https://goo.gl/maps/HMKuyoCP3Bhgnygo6" target="_blank">г. Киев, пр-т Леси Украинки,
+                        <a href="https://goo.gl/maps/HMKuyoCP3Bhgnygo6" target="_blank" class="footer-map">г. Киев, пр-т Леси Украинки,
                             26</a>
                     </li>
                     <li>
