--- a/portfolio.html
+++ b/portfolio.html
@@ -40,59 +40,59 @@
 
     <main>
         <!-- Портфолио -->
-        <section>
+        <section class="portfolio">
             <h1 hidden>Portfolio</h1>
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button" class="portfolio-button">Все</button></li>
+                <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
+                <li><button type="button" class="portfolio-button">Приложения</button></li>
+                <li><button type="button" class="portfolio-button">Дизайн</button></li>
+                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li><a href=""><img src="./images//portfolio/technokryak.jpg" alt="technokryak" width="370" height="294">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-project">Технокряк</h2>
+                <p class="portfolio-category">Веб-сайт</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/new-orlean.jpg" alt="new-orlean" width="370" height="294">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-project">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-category">Дизайн</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/seafood.jpg" alt="seafood" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-project">Ресторан Seafood</h2>
+                <p class="portfolio-category">Приложение</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/prime.jpg" alt="prime" width="370" height="294">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-project">Проект Prime</h2>
+                <p class="portfolio-category">Маркетинг</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/boxes.jpg" alt="boxes" width="370" height="294">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-project">Проект Boxes</h2>
+                <p class="portfolio-category">Приложение</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/inspiration.jpg" alt="inspiration" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-project">Inspiration has no Borders</h2>
+                <p class="portfolio-category">Веб-сайт</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/limited-edition.jpg" alt="limited-edition" width="370" height="294">
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-project">Издание Limited Edition</h2>
+                <p class="portfolio-category">Дизайн</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/lab.jpg" alt="lab" width="370" height="294">
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-project">Проект LAB</h2>
+                <p class="portfolio-category">Маркетинг</p>
                     </a>
                 </li>
                 <li><a href=""><img src="./images//portfolio/growing-business.jpg" alt="growing-business" width="370" height="294">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-project">Growing Business</h2>
+                <p class="portfolio-category">Приложение</p>
                     </a>
                 </li>
             </ul>
@@ -108,8 +108,7 @@
                 <address class="footer-address">
                     <ul class="footer-address-list">
                         <li>
-                            <a href="https://goo.gl/maps/HMKuyoCP3Bhgnygo6" target="_blank">г. Киев, пр-т Леси Украинки,
-                                26</a>
+                            <a href="https://goo.gl/maps/HMKuyoCP3Bhgnygo6" target="_blank" class="footer-map">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
                         <li>
                             <a href="mailto:info@example.com" class="footer-mail">info@example.com</a>
